--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,32 @@ annotated-types==0.7.0
 anyio==4.10.0
 appwrite==11.1.0
 certifi==2025.8.3
+cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.1.8
 colorama==0.4.6
+cryptography==45.0.6
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
 h11==0.16.0
 idna==3.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
+pytz==2025.2
 requests==2.32.5
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
-email-validator==2.1.1
